fix vertical spacing and add quote

--- a/style.css
+++ b/style.css
@@ -175,6 +175,10 @@ a {
     border-radius: 5px;
 }
 
+.pic {
+    align-self: center;
+}
+
 .content {
     display: flex;
     flex-direction: column;
@@ -196,6 +200,7 @@ a {
     margin-left: 48px;
     margin-right: 48px;
     padding-top: 16px;
+    padding-bottom: 48px;
     flex-wrap: wrap;
     row-gap: 60px;
 }
@@ -217,4 +222,24 @@ a {
     gap: 18px;
     flex-basis: 25rem;
     font-size: 18px; 
+}
+
+.quote {
+    margin-top: 120px;
+    background-color: #E5E7EB;
+    padding: 150px 200px;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    justify-content: center;
+    font-size: 40px;
+    font-weight: 100;
+    font-style: italic;
+    color: #1F2937;
+    row-gap: 50px;
+}
+
+.epicurus {
+    display: flex;
+    justify-content: flex-end;
 }
